# saemanga-rust

./: .eslintrc.json  .gitignore  .pylintrc  Cargo.toml  Rocket.toml  build.rs  gulpfile.js  nodemon.json  package-lock.json  package.json  process_prod.json  readme.md  tsconfig.json  webpack.config.js
assets/config/: webpack.config.js
assets/stylesheets/: admin.scss  basic.scss  color.scss  index.scss  main.scss  manga.scss  panel.scss  sidebar.scss
assets/templates/: admin.html.hbs  error.html.hbs  index.html.hbs  manga.html.hbs
assets/typescript/: admin.ts  assets.ts  index.ts  main.ts
docs/: database.md  schedule.md
docs/database/: design.md
docs/design/: logo-1.psd
lib/collection/: Cargo.toml  readme.md
lib/cookie_value/: Cargo.toml  readme.md
public/: readme.md
public/css/: main.css  main.css.map
public/js/: main.js  main.js.map
scripts/: .gitignore  deploy.sh  deploy_in_server.sh  gulp_build_task.js  gulp_event_pool.js  init.sh  upload.sh
scripts/dummy/: server_address.txt  server_directory.txt
services/migrate/: .gitignore  async_call.py  follow.py  main.py  manga.py  mongo_account_dummy.py  readme.md  setup.sh  user.py  util.py
services/sanity_checker/: readme.md
services/scheduler/: .gitignore  account_dummy.py  config.py  main.py  readme.md  setup.sh  tasks.py
src/: lib.rs  main.rs
src/api/: dmk_api.rs  mod.rs
src/app/: .gitignore  dmk.rs  dmk_error.rs  dmk_id_base.rs  error.rs  follow.rs  genre.rs  latest.rs  latest_manga.rs  manga.rs  manga_data.rs  manga_episode.rs  manga_status.rs  manga_wrapper.rs  mod.rs  session.rs  user.rs  user_error.rs  user_session.rs  user_setting.rs
src/models/: mod.rs  session_model.rs  user_model.rs
src/routes/: mod.rs
src/util/: collection.rs  cookie_value.rs  database.rs  error.rs  mod.rs  static_files.rs  template.rs
templates/: index.html.hbs
tests/: async_request_test.rs  bson_test.rs  cartoonmad_test.rs  dmk_api_latest_manga_test.rs  dmk_api_manga_info_test.rs  dmk_api_search_test.rs  dmk_api_test.rs  genre_test.rs  language_test.rs  manga_test.rs  rocket_test.rs
(+166 files in other folders)
