[package]
name = "saemanga"
version = "0.1.0"
authors = ["Liby Lee <liby99@icloud.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
scraper = "0.10"
hyper = "0.12"
encoding_rs = "0.8"
encoding = "0.2"
chrono = "0.4"
mongodb = "0.3"
lazy_static = "1.3"
regex = "1"
# reqwest = "0.9.15"
rust-crypto = "^0.2"
enum_primitive = "0.1"
bson = "0.13"
devise = "0.2"
quote = "0.6"
time = "0.1"
reqwest = { git = "https://github.com/liby99/reqwest" }
collection = { path = "lib/collection" }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "mongodb_pool", "serve"]